kubernetes/clusters/hyperion/longhorn/components/ingress/ingress-strawslabs.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-strawslabs
  namespace: longhorn-system
  labels:
    backuplabel.certificate: "true"
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    # link.argocd.argoproj.io/external-link: "https://longhorn-hyperion.strawslabs.com/"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - "longhorn-hyperion.strawslabs.com"
      secretName: longhorn-cert-strawslabs-tls
  rules:
    - host: "longhorn-hyperion.strawslabs.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-ui
                port:
                  number: 80
