kubernetes/clusters/hyperion/longhorn/components/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-frontend
  namespace: longhorn-system
  labels:
    backuplabel.certificate: "true"
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    link.argocd.argoproj.io/external-link: "https://longhorn.hyperion.aritrosinha.dpdns.org/"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - "longhorn.hyperion.aritrosinha.dpdns.org"
      secretName: longhorn-tls
  rules:
    - host: "longhorn.hyperion.aritrosinha.dpdns.org"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
